# convertmsg_rgbdobj_qi

./: CMakeLists.txt  README.rst  package.xml
cmake/: FindNAOqi.cmake
include/convertmsg_rgbdobj_qi/: msgrostonaoqi.hpp
include/rgbdobj_tonaoqi/: msgrostonaoqi.hpp
launch/: convertmsg_rgbdobj_qi.launch  rgbdobj_tonaoqi.launch
src/: main.cpp  msgrostonaoqi.cpp
